manifests/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-redirect-https
  namespace: homepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.smeyer.ca`)
      kind: Rule
      services:
        - name: homepage
          port: 80
  tls:
    secretName: wildcard-smeyer-ca-tls 
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-http
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`home.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: homepage-redirect-https
      services:
        - name: homepage
          port: 80
